--- a/lab3.html
+++ b/lab3.html
@@ -193,19 +193,19 @@
                     <div class="slideshow-container">
                         <!--slideshow content goes here-->
                         <div class="slide">
-                            <img src="assets/V-Zoom.jpeg">
+                            <img src="V-Zoom.jpeg">
                             <p class="caption">A zoomed-out view with the Cubism style.</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/MaMid.jpeg">
+                            <img src="MaMid.jpeg">
                             <p class="caption">A mid-scale view centered on Madison, Wisconsin.</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/Madlar.jpeg">
+                            <img src="Madlar.jpeg">
                             <p class="caption">A large-scale view of the Madison region.</p>
                         </div>
                         <div class="slide">
-                            <img src="assets/Mad-zoom-vlarge.jpeg">
+                            <img src="Mad-zoom-vlarge.jpeg">
                             <p class="caption">This is a very large scale view of Madison, WI where we can see the Isthmus, while 
                                 also being able to see all of the red amd white representing the different walking paths, and we can see 
                                 the tetxured light blue lines which are the roads. We can slso see the textured orange which are the different 
