--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ header img {
                     <p>Chicago Bicycle Tour Story Map</p>
                 </a>
 
-                <a href="GEOG572_lab3/" class="card">
+                <a href="Lab3_EthanKalchik/" class="card">
                     <img src="website.jpg" alt="Cubism Map Project">
                     <h3>GEOG 572 Lab 3</h3>
                     <p>Cubism Perspective Map</p>
