--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
           <p>Chicago Bicycle Tour Story Map</p>
       </a>
 
-      <a href="lab3.html" class="card">
+      <a href="Lab3_ EthanKalchik/" class="card">
           <img src="website.jpg" alt="Cubism Map Project">
           <h3>GEOG 572 Lab 3</h3>
           <p>Cubism Perspective Map</p>
